Resolve bugs on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,7 +76,7 @@
 .parallex-text {
     position: absolute;
     top: 346px;
-    right: 25%;
+    right: 15%;
     color: white;
     font-size: 72px;
 }
@@ -88,14 +88,14 @@ html {
 
 body {
   padding-top: 50px;  /* navbar height */
-  margin-bottom: 60px;  /* footer height */
+  margin-bottom: 100px;  /* footer height */
 }
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;  /* footer height */
+  height: 100px;  /* footer height */
   background-color: #222;
   color: #eee;
 }
